out/base/0-petmedtrack-namespace.yaml
#! 0-petmedtrack-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: petmedtrack
    labels:
        com.docker.compose.project: petmedtrack
