out/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: petmedtrack
    labels:
        com.docker.compose.project: petmedtrack
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: petmedtrack
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: petmedtrack
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: petmedtrack-app
                  image: dilaraydgms/petmedtrack:latest
                  imagePullPolicy: IfNotPresent
                  resources:
                    requests:
                      cpu: "50m"
                      memory: "192Mi"
                    limits:
                      cpu: "400m"
                      memory: "320Mi"
                  ports:
                    - name: app-8080
                      containerPort: 8080
