out/base/rabbitmq-deployment.yaml
#! rabbitmq-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq
    namespace: petmedtrack
    labels:
        com.docker.compose.project: petmedtrack
        com.docker.compose.service: rabbitmq
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: petmedtrack
            com.docker.compose.service: rabbitmq
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: petmedtrack
                com.docker.compose.service: rabbitmq
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: petmedtrack-rabbitmq
                  image: rabbitmq:3-management
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: rabbitmq-4369
                      containerPort: 4369
                    - name: rabbitmq-5671
                      containerPort: 5671
                    - name: rabbitmq-5672
                      containerPort: 5672
                    - name: rabbitmq-15691
                      containerPort: 15691
                    - name: rabbitmq-15692
                      containerPort: 15692
                    - name: rabbitmq-15671
                      containerPort: 15671
                    - name: rabbitmq-15672
                      containerPort: 15672
                    - name: rabbitmq-25672
                      containerPort: 25672
                  volumeMounts:
                    - name: var-lib-rabbitmq
                      mountPath: /var/lib/rabbitmq
            volumes:
                - name: var-lib-rabbitmq
                  persistentVolumeClaim:
                    claimName: rabbitmq-rabbitmq-data
